我觉得这回应该成功了

--- a/index.htm
+++ b/index.htm
@@ -3,8 +3,8 @@
 <html lang="zh-cn"><head><meta http-equiv="Content-Type" content="text/html; charset=GBK">
 <meta charset="gb2312">
 <title>农堂高的网站</title>
-<meta name="keywords" content="农堂高个人博客,个人博客模板,杨青">
-<meta name="description" content="农堂高个人博客，是一个站在web前端设计之路的女程序员个人网站，提供个人博客模板免费资源下载的个人原创网站。">
+<meta name="keywords" content="农堂高个人博客,个人博客模板,农堂高">
+<meta name="description" content="农堂高个人博客，是一个站在web前端设计之路的程序员个人网站，提供个人博客模板免费资源下载的个人原创网站。">
 <link href="http://www.yangqq.com/skin/2014/css/base.css" rel="stylesheet">
 <link href="http://www.yangqq.com/skin/2014/css/index.css" rel="stylesheet">
 <!--[if lt IE 9]>
